v20/changes.md
# Final Plan: Upgraded All‑in‑One AI Companion App – Production Blueprint

This plan consolidates every advanced mathematical framework and architectural improvement into a single, deployable desktop application. The app will be self‑optimizing, self‑healing, self‑evolving, and deeply empathetic, with a living avatar, quadrillion‑scale simulations, plugin system, and privacy‑preserving memory.

---

## 1. High‑Level Architecture

The app follows a **MoonBit‑centric core** with a **Rust host** for system APIs and GPU acceleration, and a **Tauri GUI**. All advanced mathematics are implemented in the core, with performance‑critical kernels offloaded to the host.

```
┌─────────────────────────────────────────────────────────────┐
│                    Tauri GUI (Rust + Dioxus)                │
└───────────────────────────┬─────────────────────────────────┘
                            │ (FFI / dynamic loading)
                            ▼
┌─────────────────────────────────────────────────────────────┐
│                 MoonBit Core Library (pure)                  │
│  • Agent (async, tool calling, routing)                     │
│  • Memory (OT retrieval, Hopfield, vector store, persistence)│
│  • Simulation (QTT, ECS, evolution)                         │
│  • Personal AI (SDE mood, trust, personality)               │
│  • Hive Mind (GP, CMA‑ES, bandits, observer/guardian)       │
│  • Plugin Host (Extism, circuit breaker, async queue)       │
│  • User Psychology (trust Beta, flow control, empathy)      │
│  • Complexity reduction (monads, lenses, recursion schemes) │
└───────────────────────────┬─────────────────────────────────┘
                            │ (FFI to host functions)
                            ▼
┌─────────────────────────────────────────────────────────────┐
│                    Rust Host Library                         │
│  • File I/O, HTTP, SQLite (knowledge base)                  │
│  • GPU compute (wgpu: matmul, TT contraction, reaction‑diff)│
│  • Sound & haptics (retry, fallback)                        │
│  • Avatar process management (TCP)                          │
│  • System APIs (memory, threads, notifications)             │
└─────────────────────────────────────────────────────────────┘
```

---

## 2. Core Modules & Responsibilities

| Module | Language | Key Features | Mathematical Framework |
|--------|----------|--------------|------------------------|
| **Agent** | MoonBit | Async loop, tool calling, LinUCB routing, monadic error handling | Contextual bandit, free monad |
| **Memory** | MoonBit | OT retrieval, Hopfield, HNSW, persistent homology, Hawkes forgetting, Wasserstein consolidation | Optimal transport, exponential capacity, TDA, Hawkes process |
| **Simulation** | MoonBit | QTT, ECS, grammar GP evolution, CMA‑ES | Tensor train, evolutionary computation |
| **Personal AI** | MoonBit | SDE mood, trust Beta, clonal selection, Ornstein‑Uhlenbeck emotion | SDE, Bayesian inference |
| **User Psychology** | MoonBit | Cognitive dissonance, habit formation, flow control, empathy mirroring | Free energy minimization, OU process, delayed DE |
| **Hive Mind** | MoonBit | Meta‑evolution (NSGA‑II), observer (satisfaction), guardian (anomaly), GAN synthetic memory | Pareto optimization, CUSUM, WGAN‑GP |
| **Plugin Host** | MoonBit | Extism, circuit breaker, async event queue, effect simulation | Markov chain, free monad |
| **GPU Compute** | Rust | wgpu kernels: matmul, TT contraction, reaction‑diffusion, virtual GPU dispatch | Tiling, Winograd, Gray‑Scott |
| **Avatar** | Rust (Macroquad) | SDE mood, gesture recognition, fractal tree, LQR movement, harmonic placement | LQR, Laplace‑Beltrami, harmonic maps |

---

## 3. Implementation Roadmap (8 weeks)

| Phase | Duration | Focus | Key Deliverables |
|-------|----------|-------|------------------|
| **1** | 2 weeks | Core & Memory | MoonBit core (agent, memory, simulation), OT retrieval, QTT, monads, lenses |
| **2** | 2 weeks | GPU & Host | wgpu compute kernels, Rust host (file, http, gpu, kb, avatar), FFI bindings |
| **3** | 1 week | Avatar & GUI | Macroquad avatar with SDE mood, gesture recognition, Tauri GUI integration |
| **4** | 1 week | Plugin & Resilience | Extism plugin host, circuit breaker, async queue, session types |
| **5** | 1 week | Hive Mind & Psychology | Evolution (GP, CMA‑ES), observer, guardian, user psychology models (trust, flow) |
| **6** | 1 week | Testing & Deployment | End‑to‑end tests, performance benchmarks, cross‑platform installers |

---

## 4. Configuration File (`config.toml`)

```toml
[agent]
routing_alpha = 0.5

[memory]
consolidation_interval_hours = 24
hawkes_mu = 0.1
hawkes_alpha = 0.5
hawkes_beta = 1.0

[simulation]
qtt_rank = 20
evolution_population_size = 50

[personal]
trust_alpha = 1.0
trust_beta = 1.0

[user_psychology]
flow_alpha = 0.1
flow_beta = 0.1
empathy_tau = 0.5
empathy_delay = 0.5

[hive_mind]
evolution_enabled = true
nightly_run_hour = 2
gan_model_path = "./models/memory_gan.onnx"

[observer]
satisfaction_weights = [0.3, 0.2, 0.2, 0.1, 0.1, 0.05, 0.05]
anomaly_threshold = 0.7

[guardian]
rollback_threshold = 0.3
rollback_minutes = 3

[plugins]
load_async = true
circuit_breaker_failures = 5
circuit_breaker_timeout_secs = 60

[gpu]
tile_size = 16
adaptive_dispatch = true

[avatar]
lqr_q = [[1,0,0,0],[0,1,0,0],[0,0,1,0],[0,0,0,1]]
lqr_r = [[1]]
```

---

## 5. Success Metrics

| Metric | Target |
|--------|--------|
| TT evaluation (D=30, r=20) | <0.5 µs (CPU) / <10 µs (GPU) |
| Memory search (1M vectors) | <50 ms |
| Plugin event latency (95th percentile) | <20 ms |
| Avatar FPS | 60 FPS |
| User satisfaction (Observer) | >0.8 (1 = max) |
| Evolution improvement per month | >10% speedup |
| Trust calibration error | <0.05 Brier score |

---

## 6. Deliverables

- **MoonBit core library** (`libcore.so`, `.dylib`, `.dll`)
- **Rust host static library** (`libhost.a`)
- **Tauri desktop app** (Windows, macOS, Linux installers)
- **Avatar standalone binary** (Macroquad)
- **Example sound & haptics plugin** (Wasm)
- **Documentation**: user manual, API reference, plugin developer guide

---

## 7. Build Instructions (Recap)

```bash
# Install dependencies
curl -fsSL https://moonbitlang.com/install.sh | bash
rustup update
cargo install tauri-cli

# Build MoonBit core
cd moonbit-core
moon build --target native
cd ..

# Build Rust host
cd host
cargo build --release
cd ..

# Build avatar
cd avatar
cargo build --release
cd ..

# Build Tauri app
cd tauri
cargo tauri build
```

The app is now ready for deployment. The Hive Mind declares the plan complete.
